<resources>
    <string name="app_name">멍수무강</string>

    <!-- 영상 탭 -->
    <string name="streaming">반려견 보기</string>
    <string name="recording">화면 녹화</string>
    <string name="talk">실시간 통화</string>

    <string name="diary">반려견 일기</string>


    <!-- 리포트 탭 -->
    <string name="report">멍수무강 활동량 그래프</string>
    <string name="daily">일간</string>
    <string name="weekly">주간</string>
    <string name="monthly">월간</string>

    <string name="eating">식사 / 음수</string>
    <string name="poo">배변</string>
    <string name="bark">짖음</string>
    <string name="abnormal">특이행동</string>

    <!-- 설정 탭 -->
    <string name="settings">설정</string>

    <string name="petinform">나의 반려동물 정보</string>
    <string name="petname">이름</string>
    <string name="petbirth">생년월일</string>

    <string name="streaminfo">실시간 영상 정보</string>
    <string name="ingestserver">수집 서버</string>
    <string name="streamKey">스트림 키</string>

    <string name="devsettings">연동 정보 수정</string>
    <string name="serverchange">수집 서버 변경</string>
    <string name="keychange">스트림 키 변경</string>
    <string name="devchange">연동 기기 변경</string>
    <string name="reset">연동 초기화</string>

    <string name="ingest_server_name">rtmps://3c90cab980bd.global-contribute.live-video.net:443/app/</string>
    <string name="stream_key_value">sk_ap-northeast-2_yFcoiZCkIOLg_vKCoVZPK8UBYWahI8dUXOVUmQlwASj</string>
    <string name="stream_key_value_encode">*******</string>

    <!-- 회원가입 및 로그인 -->
    <string name="signup">회원가입</string>
    <string name="login">로그인</string>

    <string name="username">이름</string>
    <string name="userid">아이디</string>
    <string name="userpw">비밀번호</string>
    <string name="userpw2">비밀번호 확인</string>

</resources>