<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="0dp"
    android:layout_marginRight="10dp"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Fragment1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:letterSpacing="-0.06"
                android:text="@string/settings"
                android:textColor="@color/maingray"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <!-- CardView 사용해서 CornerRadius 둥글게 만들기 -->

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFFFFFFF"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="173dp"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/devsettings"
                        android:layout_width="match_parent"
                        android:layout_height="33dp"
                        android:gravity="center"
                        android:letterSpacing="-0.06"
                        android:text="@string/streaminfo"
                        android:textColor="@color/maingray"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white">

                        <LinearLayout
                            android:layout_width="67dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/devname"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="27dp"
                                android:layout_marginBottom="0dp"
                                android:letterSpacing="-0.06"
                                android:text="@string/ingestserver"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/devtype"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom|center_horizontal"
                                android:layout_marginTop="15dp"
                                android:letterSpacing="-0.06"
                                android:text="@string/streamKey"
                                android:textColor="@color/black" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0"
                            android:orientation="vertical"
                            android:paddingLeft="5dp">

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="27dp"
                                android:maxLines="1"
                                android:ellipsize="end"
                                android:text="@string/ingest_server_name" />

                            <TextView
                                android:id="@+id/textView9"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:text="@string/stream_key_value_encode" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFFFFFFF"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="173dp"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/accsettings"
                        android:layout_width="match_parent"
                        android:layout_height="33dp"
                        android:gravity="center"
                        android:letterSpacing="-0.06"
                        android:text="@string/devsettings"
                        android:textColor="@color/maingray"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="3dp"
                            android:layout_weight="0"
                            android:orientation="vertical"
                            android:paddingLeft="5dp">

                            <Button
                                android:id="@+id/changeserver"
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="270dp"
                                android:layout_height="48dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/buttonshape"
                                android:letterSpacing="-0.06"
                                android:text="@string/serverchange"
                                android:textColor="@color/maingray"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/changestreamkey"
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="270dp"
                                android:layout_height="48dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/buttonshape"
                                android:letterSpacing="-0.06"
                                android:text="@string/keychange"
                                android:textColor="@color/maingray"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="10dp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>