<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="0dp"
    android:layout_marginRight="10dp"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Fragment1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:letterSpacing="-0.06"
                android:text="@string/report"
                android:textColor="@color/maingray"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                app:checkedButton="@id/daily"
                app:selectionRequired="true"
                app:singleSelection="true">

                <Button
                    android:id="@+id/daily"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="-0.06"
                    android:text="@string/daily"
                    android:textColor="@color/maingray"
                    android:textIsSelectable="false"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/weekly"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="-0.06"
                    android:text="@string/weekly"
                    android:textColor="@color/maingray"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/monthly"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="-0.06"
                    android:text="@string/monthly"
                    android:textColor="@color/maingray"
                    android:textStyle="bold" />
            </com.google.android.material.button.MaterialButtonToggleGroup>


            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barchart"
                android:layout_width="match_parent"
                android:layout_height="303dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFFFFFFF"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:background="@color/white"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="175dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/eatingbutton"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_marginTop="7dp"
                            android:background="@drawable/buttonshape"
                            android:letterSpacing="-0.04"
                            android:text="@string/eating"
                            android:textColor="@color/maindeep"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/barkbutton"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_gravity="bottom"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/buttonshape"
                            android:letterSpacing="-0.04"
                            android:text="@string/bark"
                            android:textColor="@color/maindeep"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="175dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/poobutton"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_marginTop="7dp"
                            android:background="@drawable/buttonshape"
                            android:letterSpacing="-0.04"
                            android:text="@string/poo"
                            android:textColor="@color/maindeep"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/abnormalbutton"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_gravity="bottom"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/buttonshape"
                            android:letterSpacing="-0.04"
                            android:text="@string/abnormal"
                            android:textColor="@color/maindeep"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFFFFFFF"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:padding="10dp">


                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0"
                            android:gravity="center"
                            android:letterSpacing="-0.04"
                            android:text="멍수무강의 코멘트"
                            android:textColor="@color/maindeep"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/movementdatatest"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:letterSpacing="-0.04"
                            android:textColor="@color/maingray" />
                    </LinearLayout>
                </ScrollView>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="vertical"></LinearLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>